<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logotext"
            android:contentDescription="@string/img_logo"/>

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerInParent="true"
            android:text="@string/silahkan"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:inputType="text"
            android:autofillHints="username"
            android:id="@+id/etusername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/usernme"
            android:hint="@string/username" />

        <EditText
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_below="@id/etusername"
            android:id="@+id/etpw"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:drawableStart="@drawable/pw"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etpw"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in"
            android:hint="@string/sign_in"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvcreate"
            android:layout_below="@id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            />

    </RelativeLayout>

</ScrollView>